# VolunChain-SmartContracts

./: .gitignore  Cargo.toml  README.md  deployments.md
contracts/: TokenContract.rs
contracts/proof-of-participation/: Cargo.toml
contracts/proof-of-participation/src/: error.rs  events.rs  lib.rs  organization.rs  organization_storage.rs  participation.rs  participation_storage.rs  storage.rs  test.rs
contracts/proof-of-participation/test_snapshots/test/: test_get_all_organizations.1.json  test_get_organization_participations_pagination.1.json  test_get_task_volunteers.1.json  test_get_task_volunteers_pagination.1.json  test_get_volunteer_participations.1.json  test_get_volunteer_participations_pagination.1.json  test_initialize_already_initialized.1.json  test_register_organization_already_registered.1.json  test_register_organization_success.1.json  test_register_organization_wrong_admin_arg.1.json  test_register_participation_already_registered.1.json  test_register_participation_metadata_too_long.1.json  test_register_participation_not_organization.1.json  test_register_participation_org_not_registered.1.json  test_register_participation_organization_not_registered.1.json  test_register_participation_success.1.json  test_register_participation_unauthorized_tx.1.json  test_remove_organization_not_admin.1.json  test_remove_organization_not_registered.1.json  test_remove_organization_success.1.json  test_remove_organization_unauthorized_tx.1.json  test_remove_organization_wrong_admin_arg.1.json  test_verify_participation.1.json
deployment/: deploy.sh
(+142 files in other folders)
